--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "cross-env": "^7.0.3",
+    "eslint": "^8.42.0",
     "tsx": "^3.12.7"
   }
 }
