--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-template",
+  "name": "airtisan",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,7 @@
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "build:client": "node esbuild.config.mjs",
     "build:widgets": "node esbuild.widgets.config.mjs",
-    "build": "npm run build:client",
+    "build": "npm run build:client && npm run build:widgets",
     "typeorm": "typeorm-ts-node-esm",
     "migrations:run": "typeorm-ts-node-esm migration:run -d database/index.ts",
     "migrations:rollback": "typeorm-ts-node-esm migration:revert -d database/index.ts"
@@ -19,27 +19,75 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@mantine/core": "^6.0.13",
+    "@mantine/dates": "^6.0.13",
+    "@mantine/form": "^6.0.13",
+    "@mantine/hooks": "^6.0.13",
+    "@mantine/notifications": "^6.0.13",
+    "@mantine/prism": "^6.0.13",
+    "@mantine/spotlight": "^6.0.13",
+    "@mantine/tiptap": "^6.0.13",
+    "@nlpjs/basic": "^4.27.0",
+    "@phosphor-icons/react": "^2.0.9",
+    "@tabler/icons-react": "^2.22.0",
+    "@tiptap/extension-link": "^2.0.3",
+    "@tiptap/react": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
+    "@types/react": "^18.2.7",
+    "axios": "^1.4.0",
+    "axios-cache-interceptor": "^1.1.1",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.2.0",
-    "esbuild": "^0.18.3",
-    "esbuild-sass-plugin": "^2.9.0",
+    "cross-env": "^7.0.3",
+    "dayjs": "^1.11.8",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "postcss": "^8.4.24",
-    "postcss-modules": "^6.0.0",
+    "gpt4all": "^1.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
+    "multer": "1.4.5-lts.1",
+    "node-nlp": "^4.27.0",
+    "nodemailer": "^6.9.2",
+    "openai": "^3.2.1",
+    "puppeteer": "^20.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.13.0",
+    "react-router-dom": "^6.11.2",
     "reflect-metadata": "^0.1.13",
-    "socket.io": "^4.6.2",
+    "socket.io": "^4.6.1",
     "sqlite3": "^5.1.6",
     "typeorm": "^0.3.16",
-    "typescript": "^5.1.3"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.2",
+    "@babel/preset-react": "^7.22.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.42.0",
-    "tsx": "^3.12.7"
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^18.16.15",
+    "@types/nodemailer": "^6.4.8",
+    "@types/prettier": "^2.7.2",
+    "@types/react-css-modules": "^4.6.4",
+    "@types/react-dom": "^18.2.4",
+    "@types/uuid": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "concurrently": "^8.0.1",
+    "css-tree": "^2.3.1",
+    "esbuild": "^0.17.19",
+    "esbuild-sass-plugin": "^2.9.0",
+    "eslint": "^8.41.0",
+    "eslint-plugin-react": "^7.32.2",
+    "postcss": "^8.4.23",
+    "postcss-modules": "^6.0.0",
+    "prettier": "2.8.0",
+    "ts-node": "^10.9.1",
+    "tsx": "^3.12.7",
+    "typescript": "^4.9.5"
   }
 }
