--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tiptap/react": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
     "@types/react": "^18.2.7",
+    "ai": "^2.1.2",
     "axios": "^1.4.0",
     "axios-cache-interceptor": "^1.1.1",
     "bcrypt": "^5.1.0",
@@ -49,13 +50,14 @@
     "multer": "1.4.5-lts.1",
     "node-nlp": "^4.27.0",
     "nodemailer": "^6.9.2",
-    "openai": "^3.2.1",
+    "openai-edge": "^1.0.0",
     "puppeteer": "^20.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.2",
     "sqlite3": "^5.1.6",
     "typeorm": "^0.3.16",
     "uuid": "^9.0.0"
